--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@themesberg/react-bootstrap": "^1.4.1",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3"
