--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.7",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3"
   },
