--- a/client/package.json
+++ b/client/package.json
@@ -18,13 +18,15 @@
     "@themesberg/react-bootstrap": "^1.4.1",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "simplebar": "^6.3.2",
-    "simplebar-react": "^3.3.2"
+    "simplebar-react": "^3.3.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
