--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@themesberg/react-bootstrap": "^1.4.1",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
@@ -39,6 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "sass": "^1.89.2",
-    "vite": "^4.5.14"
+    "vite": "^4.5.14",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
