intgearted redux thunk to handle cartitems in cart, product and product detail page

--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "simplebar": "^6.3.2",
     "simplebar-react": "^3.3.2",
     "yup": "^1.6.1"
