--- a/client/package.json
+++ b/client/package.json
@@ -25,9 +25,11 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "simplebar": "^6.3.2",
     "simplebar-react": "^3.3.2",
     "yup": "^1.6.1"
