--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "passport-twitter": "^1.0.4",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "stripe": "^18.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
